<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/dark_light"
        android:title="@string/light_dark_theme"
        app:showAsAction="never"/>

    <item
        android:title="@string/settings"
        android:id="@+id/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/share"
        android:title="@string/share_app"
        app:showAsAction="never"/>

    <item
        android:id="@+id/contact"
        android:title="@string/contact"
        app:showAsAction="never"/>
</menu>
