<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:clickable="true"
    android:background="?attr/selectableItemBackground"
    android:orientation="horizontal">

    <com.adrastel.niviel.views.CircleView
        android:id="@+id/place"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/medium"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        app:backgroundColor="@color/colorAccent"
        app:text="@string/zero"
        app:textSize="22sp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingTop="20dp"
        android:paddingBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/first_line"
            android:text="@string/competition"
            android:textColor="@color/textColorPrimary"
            android:textSize="15sp"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/second_line"
            android:text="@string/zero"
            android:textColor="@color/textColorSecondary"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="@dimen/medium"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_more"
        android:contentDescription="@string/more_info"
        android:clickable="true"
        android:layout_gravity="center_vertical"/>


</LinearLayout>