<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card"
        android:layout_margin="5dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/background_card_record">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="24dp"
                android:paddingBottom="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cube_3x3"
                        android:id="@+id/event"
                        android:textColor="@color/textColorPrimary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:layout_marginBottom="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/record"
                        android:textColor="@color/textColorSecondary"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:text="@string/zero"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            style="@style/Base.Widget.AppCompat.Button.Borderless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/more_info"
                            android:textColor="@color/adapter_record_color_button"
                            android:layout_gravity="start"
                            android:gravity="center"
                            android:layout_marginTop="8dp"
                            android:paddingLeft="0dp"
                            android:paddingRight="0dp"
                            android:paddingTop="8dp"
                            android:id="@+id/more_info"/>

                        <Button
                            style="@style/Base.Widget.AppCompat.Button.Borderless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/share"
                            android:textColor="@color/adapter_record_color_button"
                            android:layout_gravity="start"
                            android:gravity="center"
                            android:visibility="gone"
                            android:layout_marginTop="8dp"
                            android:paddingLeft="0dp"
                            android:paddingTop="8dp"
                            android:id="@+id/share"/>
                    </LinearLayout>


                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:id="@+id/cube_image"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/cube_3x3"
                    android:scaleType="fitStart" />

            </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>